// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A suite example using Snapshot renders Reviews Services correctly 1`] = `
<p>
  Be the first to review this product
</p>
`;

exports[`A suite example using Snapshot renders correctly Load More Button Component 1`] = `
<button
  className="sc-ksluoS djYkNW"
  onClick={[Function]}
>
  Load More
</button>
`;

exports[`A suite example using Snapshot renders correctly Review Display Component 1`] = `
<section
  className="sc-fujyUd bPgFlh"
>
  <div
    className="sc-pNWxx glRlCA"
  >
    <p>
      <b>
        theGreekest
      </b>
    </p>
    <p>
      New York
    </p>
  </div>
  <div
    className="sc-jrsJCI eQGrVN"
  >
    <span
      className="sc-bqGHjH gBkTZR"
    >
      <div
        className="sc-bdnylx ddxNlS"
      />
      3 years ago
    </span>
    <h3
      className="sc-crzoUp ljATUS"
    >
      The Greeks Strike Again
    </h3>
    <p>
      GreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreek
    </p>
    <p>
      <b>
        Height 
      </b>
      Shorter than 5'
    </p>
    <p>
      <b>
        Weight 
      </b>
      375 - 400 lbs
    </p>
    <p>
      <b>
        Age 
      </b>
      18 to 24
    </p>
    <p>
      <b>
        Primary Usage 
      </b>
      <span
        className="sc-bqGHjH gBkTZR"
      >
        Shirt 
        Pratical 
        #streetWear 
      </span>
    </p>
    <img
      className="sc-iqAbSa kwHshB"
      onClick={[Function]}
    />
    <span>
      Helpful?
      <button
        className="sc-iCoHVE iXcjmY"
        data-testid="yesButton"
        onClick={[Function]}
        value={1}
      >
        Yes ·
         
        1
      </button>
      <button
        className="sc-iCoHVE iXcjmY"
        data-testid="noButton"
        onClick={[Function]}
        value={2}
      >
        No ·
         
        2
      </button>
      <button
        className="sc-iCoHVE iXcjmY"
      >
        Report as inappropriate
      </button>
    </span>
  </div>
  <div
    className="sc-kEqYlL hWtfSf"
  >
    <h2
      className="sc-dIsAE gEkXsQ"
    >
      Overall Fit Rating
    </h2>
    <div
      className="sc-jSFkmK lnDnEi"
    >
      <div
        className="sc-gtssRu dWODPw"
      >
        <div
          className="sc-dlnjPT dUUXmW"
        />
        <span
          className="sc-gKAblj dJFrAv"
        />
      </div>
      <span
        className="sc-hKFyIo fNFVfG"
      >
        Runs Small
      </span>
      <span
        className="sc-eCApGN dNfuhr"
      >
        Runs Large
      </span>
    </div>
  </div>
</section>
`;

exports[`A suite example using Snapshot renders correctly Star Review Component 1`] = `
<div
  className="sc-bdnylx ddxNlS"
/>
`;

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "Runs Large 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT iEAyWe"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "Runs Small 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT eUUHfX"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "True Fit 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT dUUXmW"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Helpful Component renders correctly Helpful Button Component 1`] = `
<span>
  Helpful?
  <button
    className="sc-iCoHVE iXcjmY"
    data-testid="yesButton"
    onClick={[Function]}
    value={1}
  >
    Yes ·
     
    1
  </button>
  <button
    className="sc-iCoHVE iXcjmY"
    data-testid="noButton"
    onClick={[Function]}
    value={2}
  >
    No ·
     
    2
  </button>
  <button
    className="sc-iCoHVE iXcjmY"
  >
    Report as inappropriate
  </button>
</span>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Highest to Lowest Rating" 1`] = `
<div
  className="sc-fnVYJo iajhhJ"
  data-testid="dropDown"
>
  Sort By:
   
  Highest to Lowest Rating
   
  ▼
  <div
    className="sc-hBMVcZ dVVFnw"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Highest to Lowest Rating" 2`] = `
<div
  className="sc-fnVYJo iajhhJ"
  data-testid="dropDown"
>
  Sort By:
   
  Lowesest to Highest Rating
   
  ▼
  <div
    className="sc-hBMVcZ dVVFnw"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Most Helpful" 1`] = `
<div
  className="sc-fnVYJo iajhhJ"
  data-testid="dropDown"
>
  Sort By:
   
  Most Helpful
   
  ▼
  <div
    className="sc-hBMVcZ dVVFnw"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Most Recent" 1`] = `
<div
  className="sc-fnVYJo iajhhJ"
  data-testid="dropDown"
>
  Sort By:
   
  Most Recent
   
  ▼
  <div
    className="sc-hBMVcZ dVVFnw"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;
